feat: Introduce Week 1 linear equation solver documentation with MathJax and configure pre-commit hooks and CI.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,3 +2,36 @@ site_name: NTU SC1008 C & C++ PROGRAMMING
 site_url: https://pufanyi.com/sc1008
 theme:
   name: material
+  features:
+    - content.code.copy
+    - navigation.expand
+  palette:
+    - scheme: default
+      primary: indigo
+      accent: indigo
+    - scheme: slate
+      primary: indigo
+      accent: indigo
+      toggle:
+        icon: material/brightness-4
+        name: Switch to dark mode
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets:
+      base_path: ["."]
+  - pymdownx.superfences
+  - admonition
+  - pymdownx.details
+  - attr_list
+  - pymdownx.arithmatex:
+      generic: true
+extra_javascript:
+  - javascripts/mathjax.js
+  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
+nav:
+  - Home: index.md
+  - Week 1: week1.md
