--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,5 @@ requires-python = ">=3.13"
 dependencies = [
     "clang-format>=21.1.8",
     "mkdocs-material>=9.7.1",
+    "pre-commit>=4.5.1",
 ]
